# NemaDB

./: .gitignore  NEWS.md  README.md  main.py  nematode.info.csv  pyproject.toml
flet_build_template/{{cookiecutter.out_dir}}/: pubspec.yaml
flet_build_template/{{cookiecutter.out_dir}}/lib/: python.dart
