[project]
name = "NemaDB"
version = "1.1.0"
description = "NemaDB"
requires-python = ">=3.9"
dependencies = [
    "flet",
]

[tool.flet.app]
path = "."
module = "main"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    "build",
    "dist",
]

[tool.flet]
company = "NemaDB"
copyright = "Copyright (C) 2026 NemaDB"

[tool.flet.template]
url = "./flet_build_template"

[tool.flet.build]
file_version = "1.1.0.0"
product_version = "1.1.0.0"
product_name = "NemaDB"
